// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-0>code {
  color: #016BF8;
}

.emotion-0:focus,
.emotion-0:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-1 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-2 {
  display: inline-block;
  line-height: 28px;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <a
      class="gatsby-link emotion-0"
      href="/drivers/csharp/"
      title="Previous Section"
    >
      <div
        class="sc-gswNZR UJFxm"
      >
        <span
          class="emotion-1"
        >
          ← 
        </span>
        <span
          class="emotion-2"
        >
          MongoDB C#/.NET Driver
        </span>
      </div>
    </a>
    <a
      class="gatsby-link emotion-0"
      href="/drivers/java/"
      title="Next Section"
    >
      <div
        class="sc-gswNZR UJFxm"
      >
        <span
          class="emotion-2"
        >
          Java MongoDB Driver
        </span>
        <span
          class="emotion-1"
        >
           →
        </span>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-0>code {
  color: #016BF8;
}

.emotion-0:focus,
.emotion-0:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-1 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-2 {
  display: inline-block;
  line-height: 28px;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <a
      class="gatsby-link emotion-0"
      href="/drivers/go/"
      title="Previous Section"
    >
      <div
        class="sc-gswNZR UJFxm"
      >
        <span
          class="emotion-1"
        >
          ← 
        </span>
        <span
          class="emotion-2"
        >
          MongoDB Go Driver
        </span>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-0>code {
  color: #016BF8;
}

.emotion-0:focus,
.emotion-0:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-1 {
  display: inline-block;
  line-height: 28px;
}

.emotion-2 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <a
      class="gatsby-link emotion-0"
      href="/drivers/go/"
      title="Next Section"
    >
      <div
        class="sc-gswNZR UJFxm"
      >
        <span
          class="emotion-1"
        >
          MongoDB Go Driver
        </span>
        <span
          class="emotion-2"
        >
           →
        </span>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
